--- a/src/css/tab.css
+++ b/src/css/tab.css
@@ -109,7 +109,7 @@
 	left: 3px;
 	right: 3px;
 
-	font-size: 12px;
+	font-size: 11.5px;
 	text-align: center;
 	white-space: nowrap;
 	
@@ -118,9 +118,9 @@
 
 .tab .name span {
 	max-width: 100%;
-	height: 22px;
+	height: 21px;
 
-	padding: 2px 6px;
+	padding: 1px 6px;
 
 	display: inline-block;
 	box-sizing: border-box;
@@ -131,7 +131,7 @@
 
 	box-shadow: 0 0 0 1px rgba(12, 12, 13, 0.1);
 
-	text-overflow: "...";
+	text-overflow: "..";
 	text-shadow: 0 0 2px #ffffff;
 
 	overflow: hidden;
@@ -198,7 +198,7 @@
 }
 
 .tab.small .name span {
-	height: 20px;
+	height: 18px;
 
 	font-size: 10px;
 	text-overflow: "";
